package seedu.allinonenus.moduleplanner;

public enum Priority {
    LOW,
    MEDIUM,
    HIGH
}
